--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,6 +48,13 @@ li {
  *  CLASSES
 */
 
+.selectable {
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
+}
+
 .center-element {
     margin-left: auto;
     margin-right: auto;
