--- a/stylesheet.css
+++ b/stylesheet.css
@@ -179,6 +179,35 @@ li {
     overflow: hidden;
 }
 
+.status-div {
+    display: inline-block;
+    width: 8em;
+    height: 1.3em;
+    margin: 0.2em 0 0.5em 0;
+}
+
+.status-icon-image {
+    display: inline-block;
+    width: 1.4em;
+    height: 1.4em;
+    background-size: 100% 100%;
+}
+
+.status-bar-outer {
+    display: inline-block;
+    width: 6em;
+    height: 0.9em;
+    margin: 0.2em 0;
+    border-radius: 20px;
+}
+
+.status-bar-inner {
+    display: block;
+    width: 100%;
+    height: 0.9em;
+    border-radius: 21px;
+}
+
 .window-div {
     width: 10em;
     height: 13em;
@@ -333,14 +362,34 @@ li {
 
 #gameHeader {
     width: 100%;
+    height: 9em;
     position: absolute;
     z-index: 13;
-    margin-top: 1em;
-    text-align: center;
-    font-family: Consolas, monospace;
-    font-weight: 100;
-    font-size: 1.4em;
-    pointer-events: none;
+    /* pointer-events: none; */
+}
+
+#statusBar {
+    display: inline-block;
+    width: 30em;
+    height: 100%;
+}
+
+#playerStatusIcon {
+    display: block;
+    width: 8em;
+    height: 8em;
+    margin: 0.5em 0.5em;
+    border: 1px solid black;
+    border-radius: 0.8em;
+    float: left;
+}
+
+#statusList {
+    display: inline-block;
+    width: 20em;
+    height: 8em;
+    margin: 0.5em 0;
+    text-align: left;
 }
 
 #AnimationCanvas {
